fixed horizontal scrollbar, refactored circles

--- a/styles/about.css
+++ b/styles/about.css
@@ -47,7 +47,7 @@
   position: absolute;
   top: 0;
   right: 0;
-  z-index: 1;
+  z-index: 1000;
   width: 100%;
   height: 100%;
 
@@ -157,6 +157,7 @@
 .about-main {
   display: grid;
   grid-template-columns: min(30vw, 34.375rem) 1fr;
+  /* grid-template-columns: 1fr min(30vw, 34.375rem); */
   grid-template-rows: 1fr;
   height: 100vh;
 }
@@ -168,6 +169,9 @@
   align-items: center;
   height: 100%;
   width: 100%;
+
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
 
   overflow: hidden;
 
@@ -206,6 +210,7 @@
 }
 
 .about-body {
+  /* grid-column: 1 / 2; */
   grid-column: 2 / 3;
   box-shadow: 0 0 10px rgb(53, 53, 53);
   display: flex;
