--- a/styles/globals.css
+++ b/styles/globals.css
@@ -141,11 +141,37 @@ h5,
 }
 
 .circles-container {
-  overflow: hidden;
+  overflow: hidden !important;
   position: absolute;
   pointer-events: none;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+}
+
+.circle-1,
+.circle-2,
+.circle-3 {
+  position: absolute;
+  border: 2.2rem solid rgba(16, 16, 16, 0.05);
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.circle-1 {
+  width: 25rem;
+  height: 25rem;
+}
+
+.circle-2 {
+  width: 32.8125rem;
+  height: 32.8125rem;
+}
+
+.circle-3 {
+  width: 25rem;
+  height: 25rem;
+  right: 0;
+  transform: translate(60%, -60%);
 }
 
 .btn {
