--- a/styles/purchase.css
+++ b/styles/purchase.css
@@ -1,7 +1,6 @@
 .purchase-title {
   font-size: clamp(50px, 8vw, 70px);
 
-  width: 100%;
   display: flex;
   flex-direction: column;
   padding: 4vw 4vw 2vw 7vw;
@@ -11,7 +10,7 @@
   }
 
   & p {
-    font-size: calc(1em / 20px);
+    font-size: 0.25em;
   }
 
   & span.lower {
@@ -26,11 +25,12 @@
 .purchase-body {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
+  padding-inline: 2vw;
 }
 
 .purchase-body__images {
-  margin-left: 9vw;
+  margin-left: 7vw;
   margin-right: 4.5vw;
   display: flex;
   flex-direction: column;
@@ -43,13 +43,15 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding-block: 1rem;
-  font-size: 1.5rem;
+  padding-block: calc(0.5vw + 0.5rem);
+  /* font-size: 1.5rem; */
+  font-size: max(1.5rem, 1.5vw);
   font-weight: 600;
 
   & > p,
   > p span {
     font-size: 1em;
+    line-height: 1.25;
   }
 }
 
@@ -91,6 +93,7 @@
   background-color: #e5e7e9;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
   overflow: hidden;
+  position: relative;
 
   & img {
     height: 100%;
@@ -100,6 +103,8 @@
 }
 
 .purchase-image-selectors {
+  /* position: absolute; */
+  /* bottom: 0; */
   display: flex;
   gap: 0.65vw;
   justify-self: center;
@@ -125,23 +130,23 @@
 }
 
 .pb-option {
-  height: 4.2vw;
-  width: 18vw;
+  /* height: 3rem; */
+  height: max(3.75rem, 4.2vw);
+  width: max(15rem, 18vw);
   display: flex;
   align-items: center;
   justify-content: space-between;
   border-radius: 0.5rem;
-  padding-block: 1rem;
-  padding-inline: 1rem;
+  padding: min(0.8vw, 0.5rem);
   border: 1px solid var(--color-600);
   cursor: pointer;
-  transition: box-shadow 500ms;
+  transition: box-shadow 250ms;
   box-shadow: 0px 0px 3px transparent;
 
   & p {
     color: var(--color-400);
     line-height: 1.2;
-    font-size: 0.8vw;
+    font-size: max(0.8rem, 0.8vw);
     font-weight: 400;
   }
 
@@ -162,7 +167,7 @@
 .pb-option-header {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   height: 100%;
 }
 
@@ -172,21 +177,98 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  & p {
+    font-size: max(0.75rem, 0.75vw);
+  }
 }
 
 .pb-option-title {
   display: flex;
   flex-direction: row;
   align-items: baseline;
-  font-size: 1.17rem;
+  font-size: max(1rem, 1vw); /*1.17rem;*/
   gap: 0.35rem;
 
   & h1 {
-    font-size: 1em;
+    font-size: 1.15em;
     line-height: 1;
   }
 
   & p {
     font-size: 0.6em;
+  }
+}
+
+@media screen and (max-width: 70rem) {
+  .purchase-body {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .purchase-body__images {
+    width: 80%;
+    height: 60%;
+    margin-inline: 0 !important;
+  }
+
+  .purchase-body__options {
+    margin-block: 2rem;
+    gap: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+    & > div {
+      background-color: rgb(235, 235, 235);
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+      border-radius: 0.5rem;
+      padding: max(1rem, 1vw);
+    }
+  }
+
+  #pb-cat-1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+  }
+  #pb-cat-2 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+  }
+  #pb-cat-3 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+  }
+
+  .purchase-body-category {
+    width: 30%;
+  }
+
+  .pb-option {
+    width: 100%;
+  }
+
+  .purchase-body {
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 62.5rem) {
+  .purchase-body {
+    --margin: 8vw;
+  }
+
+  .purchase-body__options {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .purchase-body__images {
+    width: calc(100% - var(--margin) * 2);
+  }
+
+  .purchase-body-category {
+    width: calc(100% - var(--margin) * 2);
+    margin-inline: var(--margin);
   }
 }
